{{$NEXT}}

0.40  Wed Sep 1 04:34:40 GMT 2010
    - Fix erroneous dependency (s/Hailo/AI::MegaHAL/)

0.39  Tue Aug 17 22:54:48 GMT 2010
    - Use Dist::Zilla
    - Make all warnings fatal

0.38  Sun Mar 14 10:17:48 GMT 2010
    - Prevent double encoding of non-ASCII channel names
    - Support non-ASCII 'Own_channel' parameter

0.37  Wed Feb 24 02:39:35 GMT 2010
    - Always decode bytes before we use them
    - Fix parsing of pocoirc logs without date stamps

0.36  Fri Feb 19 00:01:26 GMT 2010
    - Read IRC lines as :bytes by default in irchal-seed. This
      avoids issues where PERL_UNICODE or the -C option is set to
      something which tells perl to read STDIN in UTF-8 by default.

0.35  Sun Feb 14 19:01:14 GMT 2010
    - Add META.yml to MANIFEST

0.34  Sun Feb 14 18:50:45 GMT 2010
    - Don't ignore abusers, just don't reply to them

0.33  Fri Feb 12 00:07:24 GMT 2010
    - Print a warning if POE catches an exception in our code
    - Wait for MegaHAL to save the brain before we quit

0.32  Thu Feb 11 21:03:30 GMT 2010
    - When we're addressed, trim some whitespace after the nickname
    - Make MegaHAL.pm and irchal-seed use the same regex to identify lines
      where the bot is addressed
    - irchal-seed: Remove Encode code in favor of irc_to_utf8 from pocoirc

0.31  Thu Jan 21 21:39:39 GMT 2010
    - irchal-seed: Amend bot-nick-catching regex a bit
    - irchal-seed: Document the --help and --version options
    - Converted distribution over to Module::Install
    - Test irchal-seed with Test::Script

0.30  Tue Jan 19 23:49:23 GMT 2010
    - Fix typo in subroutine name

0.29  Tue Jan 19 23:42:09 GMT 2010
    - Apply English language corrections to initial_greeting too

0.28  Tue Jan 19 23:18:31 GMT 2010
    - irchal-seed: Prepend a space to lines beginning with '#' so MegaHAL
      won't ignore them in megahal.trn
    - irchal-seed: Add a --version option
    - Forgot to decode data from MegaHAL's initial_greeting