@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Add a 'Channels' parameter
 
 0.40  Wed Sep 1 04:34:40 GMT 2010
     - Fix erroneous dependency (s/Hailo/AI::MegaHAL/)
